...
                    Row(
                        modifier = Modifier.fillMaxWidth(),
                        verticalAlignment = Alignment.CenterVertically,
                        horizontalArrangement = Arrangement.SpaceBetween
                    ) {
                        Text(
                            text = if (existing != null) "Update Goal"  else "New Goal" ,
                            style = MaterialTheme.typography.titleMedium
                        )
                        Button(
                            colors = ButtonDefaults.buttonColors().copy(
                                containerColor = Color.Transparent,
                                contentColor = MaterialTheme.colorScheme.primary
...
                        onValueChange = onNameChange,
                        colors = OutlinedTextFieldDefaults.colors(
                            focusedBorderColor = MaterialTheme.colorScheme.primary,
                            unfocusedBorderColor = MaterialTheme.colorScheme.outline
                        ),
                        placeholder = {
                            Text("e.g. Run a half marathon")
                        }
                    )
                }
            }

            // Parameters Card
...
                    onClick = {
                        if (existing == null) onAdd()
                        else onEdit()
                    },
                ) {
                    if(existing != null) {
                        Text("Update")
                    } else {
                        Text("Save Goal")
                    }
                }
            }
        }

        if (showPicker.value) {
...
