...
                                containerColor = MaterialTheme.colorScheme.primary
                            ),
                            onClick = onAddGoal,
                            shape = RoundedCornerShape(10.dp),
                            contentPadding = PaddingValues(18.dp, 10.dp)
                        ){
                            Text("+ New Goal")
                        }
                    }
                },
                colors = TopAppBarDefaults.topAppBarColors(containerColor = MaterialTheme.colorScheme.background)
            )
        },
...
                    contentPadding = PaddingValues(12.dp, 6.dp),
                    colors = ButtonDefaults.buttonColors(containerColor = Color.Transparent, contentColor = MaterialTheme.colorScheme.onSurface)
                ) {
                    Text("Edit", style = MaterialTheme.typography.bodySmall)
                }
                DangerTextButton(
                    "Delete",
                    onClick = {
                        onDelete(goal)
                    }
                )
            }
        }
...
