...
                            contentColor = MaterialTheme.colorScheme.onSurface
                        ),
                        onClick = onEdit,
                        shape = RoundedCornerShape(10.dp),
                        contentPadding = PaddingValues(18.dp, 10.dp)
                    ) {
                        Text("Edit")
                    }
                },
                colors = TopAppBarDefaults.topAppBarColors(
                    containerColor = AppColor.bg
                )
            )
...
